Home page groups alignment fix

--- a/public/styles/home.scss
+++ b/public/styles/home.scss
@@ -28,7 +28,6 @@
         width: 100%;
         display: block;
         padding-bottom: 20px;
-        text-align: left;
     }
     .section_header {
         padding: 40px 0;
